--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,6 +33,8 @@ dependencies = [
     "polars>=0.19.0",
     "pyarrow>=14.0.0",
     "pyyaml>=6.0",
+    "httpx>=0.28",
+    "structlog>=25.0",
 ]
 
 [project.optional-dependencies]
